--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_API_URL=http://localhost:5000
 VITE_WS_URL=http://localhost:5000
 VITE_ENABLE_SOCKET=true
+VITE_GOOGLE_CLIENT_ID=1095678161456-5dc2h4ekbp2uf8k1g172ibg40dvhaf7f.apps.googleusercontent.com
