--- a/package.json
+++ b/package.json
@@ -17,17 +17,21 @@
     "@mui/x-data-grid": "^8.5.3",
     "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.7.0",
+    "@tsparticles/react": "^3.0.0",
     "@types/jwt-decode": "^2.2.1",
     "axios": "^1.9.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
     "react-slick": "^0.30.3",
+    "react-tsparticles": "^2.12.2",
     "sass": "^1.87.0",
     "slick-carousel": "^1.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
