--- a/.gitignore
+++ b/.gitignore
@@ -3,22 +3,80 @@ logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Build output
+dist/
+build/
+dist-ssr/
+out/
+.next/
+.next/cache/
+coverage/
 *.local
+
+# dotenv environment variables
+.env
+.env.*
+!.env.example
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Mac system files
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# npm cache
+.npm/
+
+# Yarn cache
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Test coverage
+coverage/
+.nyc_output/
+
+# Storybook build
+storybook-static/
+
+# VSCode settings
+.vscode/*
+!.vscode/extensions.json
+
+# Optional: Ignore IDE specific folders
+*.iml
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# Optional: Ignore local images/uploads
+uploads/
+public/uploads/
