--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@tsparticles/react": "^3.0.0",
     "@types/jwt-decode": "^2.2.1",
     "axios": "^1.9.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -30,17 +32,21 @@
     "react-router-dom": "^7.5.3",
     "react-slick": "^0.30.3",
     "react-tsparticles": "^2.12.2",
+    "recharts": "^3.0.2",
     "sass": "^1.87.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
-    "tsparticles": "^3.8.1"
+    "tsparticles": "^3.8.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^22.15.21",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-slick": "^0.23.13",
+    "@types/recharts": "^1.8.29",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
